# BreadMachine

./: README.md
audio/: 16.wae
common/: common_project.h  dataexchenge.cpp  dataexchenge.h
emulator/emulator/: emulator.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  mycombobox.cpp  mycombobox.h
esp/espWifi/espWifi/: espWifi.sln  espWifi.vgdbproj  sdkconfig
esp/espWifi/espWifi/main/: CMakeLists.txt  proto.cpp  proto.h  softap_example_main.c  softap_example_main.cpp  tcp_server.c  tcp_server.cpp  tcp_server.h  uart1_driver.c  uart1_driver.cpp  uart1_driver.h
mcu/: BreadMachine.sln  STM32F407VGTX_FLASH.ld
mcu/BreadMachine/: AdcDriver.cpp  AdcDriver.h  BreadMachine-Debug.vgdbsettings  BreadMachine.vcxproj  BreadMachine.vcxproj.filters  FreeRTOSConfig.h  I2C3.cpp  I2C3.h  KeyEvent.h  MyList.cpp  MyList.h  Widget.h  WorkMode.h  WorkModeEdit.cpp  WorkModeEdit.h  stm32.props  stm32.xml  stm32f4xx_hal_conf.h
mcu/SRC/SourceProject/: AppCore.cpp  AppCore.h  AppCoreChecks.cpp  AppCoreExchenge.cpp  DisplayDriver.cpp  DisplayDriver.h  LittleBigEndian.h  globals.h  initApp.cpp  initApp.h  initTasks.cpp  initTasks.h  log.cpp  log.h  typedef.h  version.h
menu/: меню.vsdx
menu/display/: DWprj.hmi  DWprj.tft
menu/display/DWIN_SET/: 15.icl  32.icl  (+17 more)
removecontrol/ControlBread/: ControlBread.pro  Log.qml  LogForm.ui.qml  MyDialog.qml  Programs.qml  ProgramsForm.ui.qml  ProrammsNameDelegate.qml  StartPage.qml  StartPageForm.ui.qml  appcore.cpp  appcore.h  main.cpp  main.qml  modellogdatatransfer.cpp  modellogdatatransfer.h  programmsmodel.cpp  programmsmodel.h  qml.qrc
(+53 files in other folders)
